--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "^0.13.3"
   },
   "devDependencies": {
+    "node-libs-browser": "^0.5.2",
     "ntypescript": "^1.201507091536.1",
+    "react-hot-loader": "^1.2.8",
     "ts-loader": "^0.4.6",
     "webpack": "^1.10.1",
     "webpack-dev-server": "^1.10.1"
