--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.tsx",
   "scripts": {
     "start": "node server.js",
-    "build": "webpack .",
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Geoffroy Warin",
